k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskservice
spec:
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
