k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaskservice
            port:
              number: 80
  - host: arch.homework
    http:
      paths:
      - backend:
          service:
            name: flaskservice
            port:
              number: 80
        path: /otusapp(/|$)(.*)
        pathType: Prefix
